--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column w-100">
       <header class="masthead">
         <div class="inner">
-          <h3 class="masthead-brand">Blackbeard</h3>
+
+          <h3 class="masthead-brand"><i class="fas fa-skull text-warning mr-3"></i>Blackbeard</h3>
           <nav class="nav nav-masthead justify-content-center">
             <a class="nav-link active" href="#">Home</a>
             <a class="nav-link" href="#">Settings</a>
@@ -45,6 +46,11 @@
       </header>
 
       <main role="main" class="inner cover">
+          <div class="d-flex flex-row btn-group w-100 tor-toolbar mb-3">
+              <a href="#" class="btn btn-dark pause-btn">Pause all</a>
+              <a href="#" class="btn btn-dark start-btn">Start all</a>
+              <a href="#" class="btn btn-dark remove-btn">Remove all</a>
+          </div>
           <div class="torrents-container d-flex flex-column w-100">
 
           </div>
@@ -53,25 +59,72 @@
 
     <script type="module">
 
-        var activeTorrents, updateLoop, listLoop, displayLoop;
+        var activeTorrents, updateLoop, listLoop, displayLoop, cleanupLoop, animateLoop, tids, prevtime;
 
         var activeTorrents = [];
+
+        var torrs = [];
+
+        var avgTimeLeft;
+
         function initiateSockets() {
 
             const socket = io();
 
+            socket.on('msg', function(msg) {
+                console.log(msg);
+            });
+
             socket.on('torrentList', function(torrents) {
-                var tempTorrents = [];
-                torrents.torrents.forEach((item, i) => {
-                    tempTorrents.push(item);
+                activeTorrents = torrents.torrents;
+                tids = [];
+                // $(".torrents-container").html('');
+                torrents.torrents.forEach((item) => {
+                    if($(".torrent-container-"+item.id).length==0) {
+                        // draw torrent
+                        var percent = Math.round(item.percentDone*10000)/100+"%";
+                        var widthperc = Math.round(item.percentDone*10000)/100;
+                        if(parseFloat(widthperc)>!9) {
+                            widthperc = '';
+                        } else {
+                            widthperc = widthperc+"%";
+                        }
+                        var timeleft = (Math.round(item.leftUntilDone/item.rateDownload));
+                        if(item.rateDownload==0) {
+                            timeleft = "--";
+                        } else {
+                            avgTimeLeft = Math.round(timeleft);
+                            var minutesleft = Math.floor(avgTimeLeft/60);
+                            var secondsleft = Math.floor(avgTimeLeft % 60);
+                            if(secondsleft<10) {
+                                secondsleft = "0"+secondsleft;
+                            }
+                            timeleft = minutesleft+":"+secondsleft;
+                        }
+                        console.log("draw");
+                        $(".torrents-container").append(`
+                            <div class="torr torrent-container-${item.id} d-flex flex-column mb-5" data-tid=${item.id}>
+                                <div class="d-flex flex-row w-100 mb-2">
+                                    <div class="name text-truncate">${item.name}</div>
+                                    <div class="time ml-auto" data-prevtime=0>${timeleft}</div>
+                                </div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" style="width: ${percent};" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">${widthperc}</div>
+                                </div>
+                            </div>
+                        `);
+                    }
+                    tids.push( item.id );
                 });
-                activeTorrents = tempTorrents
             });
 
             socket.on('update', function(torrents) {
+                var find;
                 torrents.torrents.forEach((tor)=>{
+                    find = false;
                     activeTorrents.forEach((item) => {
                         if(item.id == tor.id) {
+                            find = true;
                             item.leftUntilDone = tor.leftUntilDone;
                             item.rateDownload = tor.rateDownload;
                             item.percentDone = tor.percentDone;
@@ -81,44 +134,96 @@
             });
 
             function update_loop() {
-                socket.emit('checkping', "yes")
+                socket.emit('checkping')
             }
 
             function list_loop() {
-                socket.emit('sendList', "yes")
+                socket.emit('sendList')
             }
+
+            $(".pause-btn").on("click", function(){
+                socket.emit('pause')
+            });
+
+            $(".start-btn").on("click", function(){
+                socket.emit('start')
+            });
+
+            $(".remove-btn").on("click", function(){
+                socket.emit('remove')
+            });
 
             function display_loop() {
                 activeTorrents.forEach((item) => {
                     if($(".torrent-container-"+item.id).length==0) {
-                        // draw torrent
-                        console.log("draw");
-                        $(".torrents-container").append(`
-                            <div class="torrent-container-${item.id} d-flex">
-                                <div class="id">${item.id}</div>
-                                <div class="name text-truncate">${item.name}</div>
-                                <div class="time"></div>
-                            </div>
-                            <div class="torrent-progress-${item.id} mb-2">
-                                <div class="progress">
-                                    <div class="progress-bar" role="progressbar" style="width: 25%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-                                </div>
-                            </div>
-                        `);
+
                     } else {
                         // update torrent
-                        console.log("update");
-                        // $(".torrent-container-"+item.id+" .status").html(item.status);
-                        $(".torrent-container-"+item.id+" .time").html(Math.round(item.leftUntilDone/item.rateDownload)+"s");
-                        $(".torrent-progress-"+item.id+" .progress-bar").html(Math.round(item.percentDone*100)+"%");
-                        $(".torrent-progress-"+item.id+" .progress-bar").css("width", Math.round(item.percentDone*100)+"%");
+                        if(item.leftUntilDone!==undefined) {
+                            var widthperc = Math.round(item.percentDone*10000)/100;
+                            if(parseFloat(widthperc)>9) {
+                                widthperc = widthperc+"%";
+                            } else {
+                                widthperc = '';
+                            }
+                            if(item.leftUntilDone==0 || item.rateDownload==0) {
+                                $(".torrent-container-"+item.id+" .time").html("--");
+                            } else {
+                                var timeRemaining = Math.round(item.leftUntilDone/item.rateDownload);
+                                prevtime = parseInt($(".torrent-container-"+item.id+" .time").data('prevtime'));
+                                avgTimeLeft = parseInt(prevtime*15+timeRemaining)/16;
+                                avgTimeLeft = Math.round(avgTimeLeft);
+                                var minutesleft = Math.floor(avgTimeLeft/60);
+                                var secondsleft = Math.floor(avgTimeLeft % 60);
+                                if(secondsleft<10) {
+                                    secondsleft = "0"+secondsleft;
+                                }
+                                $(".torrent-container-"+item.id+" .time").html(minutesleft+":"+secondsleft);
+                                $(".torrent-container-"+item.id+" .time").data('prevtime', avgTimeLeft);
+                            }
+                            // $(".torrent-container-"+item.id+" .status").html(item.status);
+                            $(".torrent-container-"+item.id+" .progress-bar").html(widthperc);
+                            $(".torrent-container-"+item.id+" .progress-bar").css("width", Math.round(item.percentDone*10000)/100+"%");
+                        } else {
+                            $(".torrent-container-"+item.id+" .time").html("--");
+                        }
                     }
                 });
             }
 
-            updateLoop = setInterval(update_loop, 200);
-            listLoop = setInterval(list_loop, 5000);
-            displayLoop = setInterval(display_loop, 200);
+            function cleanup_loop() {
+                $(".torr").each(function(){
+                    var t = $(this);
+                    var find;
+                    find = false;
+                    activeTorrents.forEach((item) => {
+                        if(item.id==t.data('tid')) {
+                            // console.log("found "+item.id);
+                            find = true;
+                        }
+                    })
+                    if(!find) {
+                        $(".torrent-container-"+t.data('tid')).remove();
+                    }
+                })
+            }
+
+            function animate_loop() {
+                $(".progress-bar").each(function(){
+                    if(Math.random()>0.7) {
+                        var bar = $(this);
+                        bar.css("box-shadow", "0px 0px "+Math.round(Math.random()*16)+8+"px 0px #ffeb00");
+                    }
+                });
+            }
+
+            updateLoop = setInterval(update_loop, 400);
+            listLoop = setInterval(list_loop, 10000);
+            displayLoop = setInterval(display_loop, 400);
+            cleanupLoop = setInterval(cleanup_loop, 2000);
+            animateLoop = setInterval(animate_loop, 300);
+
+            list_loop();
 
         }
 
@@ -132,7 +237,7 @@
             $(".init-btn").on("click", function(){
                 initiateSockets();
                 $("html").off("keyup");
-                $(".game-screen").addClass("hide");
+                $("body").addClass("initiate");
                 setTimeout(function(){
                     $(".game-screen").remove();
                 }, 600);
